gap safari issue

--- a/src/pages/About/about.module.css
+++ b/src/pages/About/about.module.css
@@ -90,7 +90,7 @@
 .founders {
   padding: 2em;
   background: white;
-  gap: 1em;
+  gap: 1em 0;
 
   .header {
     margin-bottom: 1em;
